--- a/src/discovery/package.json
+++ b/src/discovery/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@heroicons/vue": "^2.0.18",
+    "flowbite": "^1.8.1",
+    "moment": "^2.29.4",
+    "vue": "^3.3.4",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
